# template-python-package

./: .editorconfig  .flake8  .gitignore  .lefthook.yml  MANIFEST.in  README.md  devbox.json  pyproject.toml  requirements-dev.txt  tox.ini
.devcontainer/: devcontainer.json  on-create.sh
.devcontainer-compose/: devcontainer.json  docker-compose.yml  on-create.sh  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
src/example/: func.py
src/example_app/: main.py
src/example_lib/: __main__.py
test/example/: test_func.py
test/example_app/: test_main.py
test/example_lib/: test_func.py
