[project]
name = "PACKAGE_NAME"
version = "0.1.0"
authors = [{ name = "USERNAME" }]
description = "PACKAGE_DESCRIPTION"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/USERNAME/PACKAGE_NAME"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.17.1", "pip-licenses>=5.0.0", "ruff>=0.12.11"]
doc = ["sphinx>=8.2.3"]
profile = ["gprof2dot>=2025.4.14", "memray>=1.18.0"]
test = [
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=6.2.1",
  "pytest>=8.4.1",
  "tox-uv>=1.28.0",
  "tox>=4.29.0",
]

[tool.uv.build-backend]
module-name = "example_lib"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--benchmark-skip"
# occur `no-data-collected` at coverage if removed.
pythonpath = "src"

[tool.ruff]
# relaxed line length
line-length = 99

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
extend-select = [
  "ANN", # flake8-annotations (ANN)
  "S",   # flake8-bandit (S)
  "A",   # flake8-builtins (A)
  "FIX", # flake8-fixme (FIX)
  "PYI", # flake8-pyi (PYI)
  "Q",   # flake8-quotes (Q)
  "PTH", # flake8-use-pathlib (PTH)
  "I",   # isort (I)
  "N",   # pep8-naming (N)
  "E",   # pycodestyle (E)
  "W",   # pycodestyle (W)
  "D",   # pydocstyle (D)
  "F",   # Pyflakes (F)
  "PL",  # Pylint (PL)
  "UP",  # pyupgrade (UP)
  "RUF", # Ruff-specific rules (RUF)
]
ignore = [
  "D203", # incorrect-blank-line-before-class (D203)
  "D213", # multi-line-summary-second-line (D213)
]

[tool.ruff.lint.per-file-ignores]
"test/*" = [
  "S101", # assert (S101)
  "D",    # pydocstyle (D)
]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
  format
  lint
  type
  py312
  py313
  py314

[testenv]
deps =
  pytest
  pytest-benchmark
  pytest-cov
commands =
  pytest --cov-append --cov-branch --cov=src -v

[testenv:format]
commands =
  uv format --check

[testenv:lint]
deps = ruff
commands =
  ruff check

[testenv:type]
deps = mypy
commands =
  mypy ./src
"""
